Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-542

Perl compiler uses invalid method 'method_exists' and unassigned subroutine arguments in generate_service_processor()

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 0.2
    • Perl - Compiler
    • None
    • Patch Available

    Description

      Issue is a simple fix; will attach a patch

      Attachments

        1. jira_542.patch
          2 kB
          T Jake Luciani
        2. thrift_perl_server.pl
          3 kB
          Eric Waters
        3. thrift-542.diff
          1 kB
          Eric Waters

        Activity

          People

            ewaters Eric Waters
            ewaters Eric Waters
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: