THRIFT-542: Perl compiler uses invalid method 'method_exists' and subsequent test

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@794938 13f79535-47bb-0310-9956-ffa450edef68